--- a/src/components/BestReviewsPage/bestReviews.css
+++ b/src/components/BestReviewsPage/bestReviews.css
@@ -5,3 +5,15 @@
     flex-wrap: wrap;
     padding-top: 1rem;
 }
+@media only screen and (max-width:496px) {
+    .bestReviews-css{
+   
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 6rem;
+        flex-wrap: wrap;
+        padding-top: 1rem;
+       
+    }
+}
