--- a/src/components/Popularpage/popularpage.css
+++ b/src/components/Popularpage/popularpage.css
@@ -6,3 +6,16 @@
     padding-top: 1rem;
    
 }
+
+@media only screen and (max-width:496px) {
+    .popularpage-css{
+   
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 6rem;
+        flex-wrap: wrap;
+        padding-top: 1rem;
+       
+    }
+}
