--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -31,6 +31,12 @@
     color: rgba(165, 42, 42, 0.979);
     cursor: pointer;
 }
+@media only screen and (max-width:760px) {
+.header{
+    width: 100vw;
+}
+   
+}
 @media only screen and (max-width:500px){
     html{
         font-size: 6px;
