--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 body{
   background-color: black;
